build: port to per-module directory layout