@@ -2,7 +2,7 @@
  * Copyright LWJGL. All rights reserved.
  * License terms: https://www.lwjgl.org/license
  */
-package org.lwjgl.tool;
+package org.lwjgl.generator.util;
 
 import javax.tools.*;
 import java.io.*;
@@ -10,17 +10,15 @@ import java.nio.charset.*;
 import java.nio.file.*;
 import java.util.*;
 import java.util.regex.*;
+import java.util.stream.*;
 
-public final class ModuleInfoGen {
+public final class ModuleInfoGen implements AutoCloseable {
 
     private static final String JAVA_PACKAGE = "\\p{javaJavaIdentifierStart}\\p{javaJavaIdentifierPart}*(\\s*\\.\\s*\\p{javaJavaIdentifierStart}\\p{javaJavaIdentifierPart}*)*";
 
-    private static final Pattern MODULE_NAME = Pattern.compile("^\\s*(?:open\\s+)?module\\s+(" + JAVA_PACKAGE + ")\\s*\\{", Pattern.MULTILINE);
-
-    private static final Pattern EXPORTS = Pattern.compile(
-        "[{;]\\s*exports\\s+(" + JAVA_PACKAGE + ")(?:\\s+to\\s+" + JAVA_PACKAGE + ")?\\s*(?=;)",
-        Pattern.MULTILINE
-    );
+    private static final Pattern
+        COMMA       = Pattern.compile(","),
+        MODULE_NAME = Pattern.compile("^\\s*(?:open\\s+)?module\\s+(" + JAVA_PACKAGE + ")\\s*\\{", Pattern.MULTILINE);
 
     private final JavaCompiler compiler;
 
@@ -36,74 +34,102 @@ public final class ModuleInfoGen {
         fileManager = compiler.getStandardFileManager(diagnostics, Locale.getDefault(), StandardCharsets.UTF_8);
     }
 
-    public static void main(String[] args) {
-        ModuleInfoGen gen = new ModuleInfoGen();
+    @Override
+    public void close() throws IOException {
+        fileManager.close();
+    }
 
-        try (gen.fileManager) {
-            Path[] modules = Files.list(Paths.get("modules/module-info-gen/src/main/resources"))
-                .filter(Files::isRegularFile)
-                .filter(it -> {
-                    String filename = it.getFileName().toString();
-                    return filename.startsWith("org.lwjgl.") && filename.endsWith(".java");
-                })
-                .sorted(Comparator
-                    .<Path>comparingInt(it -> it.getFileName().toString()
-                        .chars()
-                        .map(c -> c == '.' ? 1 : 0) // less dots first
-                        .sum())
-                    .thenComparing(Comparator.naturalOrder())
-                )
-                .toArray(Path[]::new);
+    public static void main(String[] args) throws IOException {
+        if (args.length < 2) {
+            throw new IllegalArgumentException("Usage: ModuleInfoGen <module.list> <module.list.java-only>");
+        }
 
+        List<String> moduleNames = COMMA
+            .splitAsStream(args[0])
+            .collect(Collectors.toList());
+
+        Set<String> javaOnly = COMMA
+            .splitAsStream(args[1])
+            .collect(Collectors.toSet());
+
+        try (ModuleInfoGen gen = new ModuleInfoGen()) {
+            // Find module-info sources
+            List<Path> modules = moduleNames.stream()
+                .map((it) -> Paths.get("modules/lwjgl", it, "src/main/resources/module-info.java"))
+                .collect(Collectors.toList());
+
+            // Compile module-info classes
             for (Path path : modules) {
-                gen.compileModuleInfo(path);
+                gen.compileModuleInfo(path, javaOnly);
             }
-        } catch (IOException e) {
-            e.printStackTrace();
+
+            // Move module-info classes to <module>/META-INF/versions/9
+            for (String module : moduleNames) {
+                Path moduleInfoClass = Paths.get("bin/classes/lwjgl/" + module + "/module-info.class");
+                moveModuleInfo(moduleInfoClass);
+
+                Path natives = moduleInfoClass.getParent().resolveSibling(module + ".natives");
+                if (Files.isDirectory(natives)) {
+                    moveModuleInfo(natives.resolve("module-info.class"));
+                }
+            }
         }
     }
 
-    private void compileModuleInfo(Path path) throws IOException {
+    private void compileModuleInfo(Path path, Set<String> javaOnly) throws IOException {
         String moduleInfo = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
 
-        String module = MODULE_NAME.matcher(moduleInfo)
-            .results()
-            .findFirst()
-            .orElseThrow(() -> new IllegalStateException("Failed to find module name"))
-            .group(1);
-
-        if (Pattern.compile("[{;]\\s*requires(?:\\s+static)?\\s+" + module + ".natives\\s*;").matcher(moduleInfo).find()) {
-            compileModuleInfo(module + ".natives", "module " + module + ".natives {}");
+        Matcher matcher = MODULE_NAME.matcher(moduleInfo);
+        if (!matcher.find()) {
+            throw new IllegalStateException("Failed to find module name");
         }
+        String moduleJava = matcher.group(1);
 
-        compileModuleInfo(module, moduleInfo);
+        String module = "org.lwjgl".equals(moduleJava)
+            ? "core"
+            : moduleJava.substring("org.lwjgl.".length());
+
+        compileModuleInfo(module, moduleJava, moduleInfo);
+        if (!javaOnly.contains(module)) {
+            //Paths.get("bin/classes/lwjgl/" + module + ".natives");
+            compileModuleInfo(
+                module + ".natives",
+                moduleJava + ".natives",
+                "module " + moduleJava + ".natives {\n" +
+                "    requires transitive " + moduleJava + ";\n" +
+                "}"
+            );
+        }
     }
 
     private void compileModuleInfo(
         String module,
+        String moduleJava,
         String moduleInfo
     ) {
-        List<JavaFileObject> compilationUnits = new ArrayList<>();
-        compilationUnits.add(new MemoryJavaFileObject(module + "/module-info.java", moduleInfo));
-
-        EXPORTS.matcher(moduleInfo).results()
-            .map(it -> createDummyClass(module, it.group(1)))
-            .forEach(compilationUnits::add);
+        List<JavaFileObject> compilationUnits = new ArrayList<>(32);
+        compilationUnits.add(new MemoryJavaFileObject("modules/lwjgl/" + module + "/src/main/java/module-info.java", moduleInfo));
 
         JavaCompiler.CompilationTask task = compiler.getTask(
             null,
             fileManager,
             diagnostics,
-            List.of(
-                "--module-path", "bin/MODULES",
-                "-d", "bin/MODULES/" + module
+            Arrays.asList(
+                "--module-path", module.startsWith("core")
+                    ? "bin/classes/lwjgl/core"
+                    : "bin/classes/lwjgl/core" + File.pathSeparator + "bin/classes/lwjgl/" + (
+                    module.endsWith(".natives")
+                        ? module.substring(0, module.indexOf('.'))
+                        : module
+                ),
+                "-d", "bin/classes/lwjgl/" + module
             ),
             null,
             compilationUnits
         );
 
         boolean success = task.call();
-        System.out.println(module + ": " + (success ? "OK" : "FAILED"));
+        System.out.println(moduleJava + ": " + (success ? "OK" : "FAILED"));
         if (!success) {
             System.out.flush();
             diagnostics.getDiagnostics().forEach(it -> {
@@ -119,12 +145,14 @@ public final class ModuleInfoGen {
         }
     }
 
-    private static MemoryJavaFileObject createDummyClass(String module, String packageName) {
-        return new MemoryJavaFileObject(
-            module + "/" + packageName.replace('.', '/') + "/Dummy.java",
-            "package " + packageName + ";\n" +
-            "\n" +
-            "public class Dummy {}\n"
+    private static void moveModuleInfo(Path moduleInfoClass) throws IOException {
+        Path java9 = moduleInfoClass.resolveSibling("META-INF/versions/9");
+        Files.createDirectories(java9);
+
+        Files.move(
+            moduleInfoClass,
+            java9.resolve("module-info.class"),
+            StandardCopyOption.REPLACE_EXISTING
         );
     }
 
